Added andpoints for competitions
